[project]
name = "ComfyUI_SSBeforeAfterNode"
description = "Two powerful custom nodes for ComfyUI to create stunning before-and-after transition videos. These nodes are designed for visual comparisons, transformations, and creative effects, supporting both standard and depth map-based transitions."

version = "1.1.3"
license = "LICENSE"
dependencies = ["torch", "numpy", "Pillow", "opencv-python", "imageio"]

[project.urls]
Repository = "https://github.com/SamSeenX/ComfyUI_SSBeforeAfterNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "samseen"
DisplayName = "ComfyUI_SSBeforeAfterNode"
Icon = "https://raw.githubusercontent.com/SamSeenX/ComfyUI_SSBeforeAfterNode/refs/heads/main/logo.png"
Tags = ["img2vid", "animate", "depth-map", "image to video", "video", "image-sequence", "depth-anything"]